Queda que pongas el Classic School bonito y ver que podemos ahorrar del css

--- a/Index2.html
+++ b/Index2.html
@@ -136,7 +136,7 @@
             </div>
         </div>
         <!--Profesores-->
-        <div class="contents d-block mt-5">
+        <div class="contents d-block">
             <div class="container-fluid">
                 <header class="mb-5">
                     <h2 class="text-center text-uppercase text-secondary" id="profesores">Profesores</h2>
