Queda que pongas el Classic School bonito y ver que podemos ahorrar del css

--- a/Index2.html
+++ b/Index2.html
@@ -357,12 +357,12 @@
                     <div class="col-md-6">
                         <label for="email" class="form-label">E-mail</label>
                         <input class="form-control" type="email" name="email" id="email"
-                            placeholder="Ej: hola@gmail.com" required>
+                            placeholder="Ej: juanPerez@gmail.com" required>
                     </div>
                     <div class="col-md-6">
                         <label for="telefono" class="form-label">Teléfono</label>
                         <input class="form-control" type="text" name="apellidos" id="apellidos"
-                            placeholder="Ej: +34 123456789" required>
+                            placeholder="Ej: 653456789" required>
                     </div>
                     <div class="col">
                         <label for="comentarios" class="form-label">Comentarios</label>
@@ -379,7 +379,7 @@
     </main>
     <footer class=" footer bg-dark text-white pt-4 pb-4">
         <nav class="container">
-            <ul class="row text-center justify-content-center" style="list-style-type: none;">
+            <ul class="row text-center justify-content-center">
                 <li class="col-12 col-md-6 col-xl">
                     <a class="nav-link text-center text-white"
                         href="https://blog.registrodeimpagadosjudiciales.es/articulos-juridicos/requisitos-legales-pagina-web/">LOPD</a>
