--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Latest compiled JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="./css-2.css" type="text/css">
+    <link rel="stylesheet" href="./css.css" type="text/css">
 </head>
 
 <body>
