--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="./Recursos/Imagenes/Logo.webp" alt="Logo" style="width:70px;" class="rounded-circle">
+                    <img src="./Recursos/Imagenes/Logo.webp" alt="Logo" width="70px" class="rounded-circle">
                 </a>
                 <div>
                     <h3 class="text-white">Classic Music School</h3>
@@ -56,7 +56,7 @@
         <div id="demo" class="carousel slide mt-0" data-bs-ride="carousel">
 
             <!-- Indicators/dots -->
-            <div class="carousel-indicators bg-dark">
+            <div class="carousel-indicators bg-transparent">
                 <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
                 <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
                 <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
@@ -66,7 +66,7 @@
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img src="./Recursos/Imagenes/Piano_Carrusel.jpg" alt="Imagen de un piano" class="d-block"
-                        style="width:100%">
+                        width="100%">
                     <div class="carousel-caption">
                         <h3>Beethoven</h3>
                         <p>Compositor, director de orquesta, pianista y profesor de piano alemán.</p>
@@ -74,7 +74,7 @@
                 </div>
                 <div class="carousel-item">
                     <img src="./Recursos/Imagenes/-Orquesta-1.jpg" alt="Imagen de una orquesta" class="d-block"
-                        style="width:100%">
+                        width="100%">
                     <div class="carousel-caption">
                         <h3>Mozart</h3>
                         <p>«Lo único peor que una flauta, son dos flautas».</p>
@@ -82,7 +82,7 @@
                 </div>
                 <div class="carousel-item">
                     <img src="./Recursos/Imagenes/carrusel_conservatorio.jpg" alt="Imagen de un conservatorio grande"
-                        class="d-block" style="width:100%">
+                        class="d-block" width="100%">
                     <div class="carousel-caption">
                         <h3>Richard Wagner</h3>
                         <p>Compositor, director de orquesta, poeta, ensayista, dramaturgo y teórico musical alemán del
@@ -105,7 +105,7 @@
                     <h2 class="text-center text-uppercase text-secondary" id="quienessomos">¿Quiénes Somos?</h2>
                 </header>
             </div>
-            <div class="container px-4 py-5">
+            <div class="container">
                 <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
                     <div class="feature col">
                         <h2 class="text-white">Sobre Nosotros</h2>
@@ -222,7 +222,8 @@
                                             <div class="panel panel-default">
                                                 <div class="panel-heading">
                                                     <div class="row ">
-                                                        <div>
+                                                        <div class="input-group">
+                                                            <span class="input-group-text">ES</span>
                                                             <input type="text" class="form-control"
                                                                 placeholder="Introduzca su número de tarjeta"
                                                                 required />
