--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <img src="./Recursos/Imagenes/Logo.webp" alt="Logo" width="70px" class="rounded-circle">
                 </a>
                 <div>
-                    <h3 class="text-white">Classic Music School</h3>
+                    <h3 class="text-white letraTituloYPrecio">Classic Music School</h3>
                 </div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#collapsibleNavbar">
@@ -202,9 +202,9 @@
                             <h5 class="my-0 font-weight-normal text-center">Free</h5>
                         </div>
                         <div class="card-body">
-                            <h1 class="card-title pricing-card-title text-center">0€<small
+                            <h1 class="card-title pricing-card-title text-center">20€<small
                                     class="text-muted">/mes</small></h1>
-                            <ul class="list-unstyled mt-3 mb-4">
+                            <ul class="list-unstyled mt-3 mb-4 letraTituloYPrecio">
                                 <li>Clases: Lunes</li>
                                 <li>Instrumentos disponibles: Piano</li>
                                 <li>1h de clase</li>
@@ -278,9 +278,9 @@
                             <h5 class="my-0 font-weight-normal text-center">Pro</h5>
                         </div>
                         <div class="card-body">
-                            <h1 class="card-title pricing-card-title text-center">10€<small
+                            <h1 class="card-title pricing-card-title text-center">30€<small
                                     class="text-muted">/mes</small></h1>
-                            <ul class="list-unstyled mt-3 mb-4">
+                            <ul class="list-unstyled mt-3 mb-4 letraTituloYPrecio">
                                 <li>Clases: Martes y Jueves</li>
                                 <li>Instrumentos disponibles: Piano y Guitarra</li>
                                 <li>2h de clase</li>
@@ -309,9 +309,9 @@
                             <h5 class="my-0 font-weight-normal text-center">Master</h5>
                         </div>
                         <div class="card-body">
-                            <h1 class="card-title pricing-card-title text-center">15€<small
+                            <h1 class="card-title pricing-card-title text-center">45€<small
                                     class="text-muted">/mes</small></h1>
-                            <ul class="list-unstyled mt-3 mb-4">
+                            <ul class="list-unstyled mt-3 mb-4 letraTituloYPrecio">
                                 <li>3 días de clase a elegir</li>
                                 <li>Acceso a todos nuestors Instrumentos</li>
                                 <li>2.5h de clase</li>
