Falta por cambiar el outline del contacto

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <img src="./Recursos/Imagenes/Logo.webp" alt="Logo" width="70px" class="rounded-circle">
                 </a>
                 <div>
-                    <h3 class="text-white letraTituloYPrecio">Classic Music School</h3>
+                    <h3 class="text-white fs-13">Classic Music School</h3>
                 </div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#collapsibleNavbar">
@@ -204,7 +204,7 @@
                         <div class="card-body">
                             <h1 class="card-title pricing-card-title text-center">20€<small
                                     class="text-muted">/mes</small></h1>
-                            <ul class="list-unstyled mt-3 mb-4 letraTituloYPrecio">
+                            <ul class="list-unstyled mt-3 mb-4 letraPrecio">
                                 <li>Clases: Lunes</li>
                                 <li>Instrumentos disponibles: Piano</li>
                                 <li>1h de clase</li>
@@ -280,7 +280,7 @@
                         <div class="card-body">
                             <h1 class="card-title pricing-card-title text-center">30€<small
                                     class="text-muted">/mes</small></h1>
-                            <ul class="list-unstyled mt-3 mb-4 letraTituloYPrecio">
+                            <ul class="list-unstyled mt-3 mb-4 letraPrecio">
                                 <li>Clases: Martes y Jueves</li>
                                 <li>Instrumentos disponibles: Piano y Guitarra</li>
                                 <li>2h de clase</li>
@@ -311,7 +311,7 @@
                         <div class="card-body">
                             <h1 class="card-title pricing-card-title text-center">45€<small
                                     class="text-muted">/mes</small></h1>
-                            <ul class="list-unstyled mt-3 mb-4 letraTituloYPrecio">
+                            <ul class="list-unstyled mt-3 mb-4 letraPrecio">
                                 <li>3 días de clase a elegir</li>
                                 <li>Acceso a todos nuestors Instrumentos</li>
                                 <li>2.5h de clase</li>
@@ -338,7 +338,7 @@
                 </div>
             </div>
         </div>
-        <!--Contacto-->
+        <!--Contacto (cambiar el outline del formulario)-->
         <div class="contents d-block mt-5" id="contacto">
             <div class="container-fluid">
                 <header class="mb-5">
