Se hacen unos retoques en el html y se modifica lo del contacto

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <img src="./Recursos/Imagenes/Logo.webp" alt="Logo" width="70px" class="rounded-circle">
                 </a>
                 <div>
-                    <h3 class="text-white fs-13">Classic Music School</h3>
+                    <h3 class="text-white fs-13 letraPrecio">Classic Music School</h3>
                 </div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#collapsibleNavbar">
@@ -199,7 +199,7 @@
                 <div class="card-group">
                     <div class="card p-2 border border-5">
                         <div class="card-header">
-                            <h5 class="my-0 font-weight-normal text-center">Free</h5>
+                            <h5 class="my-0 font-weight-normal text-center">Principiante</h5>
                         </div>
                         <div class="card-body">
                             <h1 class="card-title pricing-card-title text-center">20€<small
@@ -346,27 +346,27 @@
                 </header>
                 <form class="row" action="#" method="post">
                     <div class="col-md-6">
-                        <label for="nombre" class="form-label">Nombre</label>
+                        <label for="nombre" class="form-label text-white h5">Nombre</label>
                         <input class="form-control" type="text" name="nombre" id="nombre" placeholder="Ej: Pablo"
                             required>
                     </div>
                     <div class="col-md-6">
-                        <label for="apellidos" class="form-label">Apellidos</label>
+                        <label for="apellidos" class="form-label text-white h5">Apellidos</label>
                         <input class="form-control" type="text" name="apellidos" id="apellidos"
                             placeholder="Ej: García García" required>
                     </div>
                     <div class="col-md-6">
-                        <label for="email" class="form-label">E-mail</label>
+                        <label for="email" class="form-label text-white h5">E-mail</label>
                         <input class="form-control" type="email" name="email" id="email"
                             placeholder="Ej: juanPerez@gmail.com" required>
                     </div>
                     <div class="col-md-6">
-                        <label for="telefono" class="form-label">Teléfono</label>
+                        <label for="telefono" class="form-label text-white h5">Teléfono</label>
                         <input class="form-control" type="text" name="apellidos" id="apellidos"
                             placeholder="Ej: 653456789" required>
                     </div>
                     <div class="col">
-                        <label for="comentarios" class="form-label">Comentarios</label>
+                        <label for="comentarios" class="form-label text-white h5">Comentarios</label>
                         <textarea class="form-control" name="comentarios" id="comentario" cols="20" rows="5"></textarea>
                     </div>
                     <div class="col-md-12">
