--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </header>
     <main class="container-fluid bg-dark">
         <!-- Carousel -->
-        <div id="demo" class="carousel slide mt-0" data-bs-ride="carousel">
+        <div id="demo" class="carousel slide mt-5" data-bs-ride="carousel">
 
             <!-- Indicators/dots -->
             <div class="carousel-indicators bg-transparent">
@@ -67,25 +67,25 @@
                 <div class="carousel-item active">
                     <img src="./Recursos/Imagenes/Piano_Carrusel.jpg" alt="Imagen de un piano" class="d-block"
                         width="100%">
-                    <div class="carousel-caption">
-                        <h3>Beethoven</h3>
-                        <p>Compositor, director de orquesta, pianista y profesor de piano alemán.</p>
+                    <div class="carousel-caption position-absolute">
+                        <h3 class="font-weight-bolder">Beethoven</h3>
+                        <p  class="font-weight-bolder">Compositor, director de orquesta, pianista y profesor de piano alemán.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="./Recursos/Imagenes/-Orquesta-1.jpg" alt="Imagen de una orquesta" class="d-block"
                         width="100%">
-                    <div class="carousel-caption">
-                        <h3>Mozart</h3>
-                        <p>«Lo único peor que una flauta, son dos flautas».</p>
+                    <div class="carousel-caption position-absolute">
+                        <h3 class="font-weight-bolder" >Mozart</h3>
+                        <p class="font-weight-bolder">«Lo único peor que una flauta, son dos flautas».</p>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="./Recursos/Imagenes/carrusel_conservatorio.jpg" alt="Imagen de un conservatorio grande"
                         class="d-block" width="100%">
-                    <div class="carousel-caption">
-                        <h3>Richard Wagner</h3>
-                        <p>Compositor, director de orquesta, poeta, ensayista, dramaturgo y teórico musical alemán del
+                    <div class="carousel-caption position-absolute">
+                        <h3  class="font-weight-bolder">Richard Wagner</h3>
+                        <p  class="font-weight-bolder">Compositor, director de orquesta, poeta, ensayista, dramaturgo y teórico musical alemán del
                             Romanticismo.</p>
                     </div>
                 </div>
@@ -142,47 +142,47 @@
                     <h2 class="text-center text-uppercase text-secondary" id="profesores">Profesores</h2>
                 </header>
                 <div class="card-group">
-                    <div class="card p-2 border border-5">
+                    <div class="card p-2 border border-5 m-2">
                         <img src="./Recursos/Imagenes/Beethoven_Carrusel.jpeg" class="card-img-top"
                             alt="Imagen del profesor Beethoven">
                         <div class="card-body">
                             <h3 class="card-title">Beethoven</h3>
-                            <p class="card-text">Puedes ver unas de mis obras más
+                            <p class="card-text text-shadow-none">Puedes ver unas de mis obras más
                                 representativas para inspirarte a
                                 suscribirte a nuestras clases, ¡estás hablando con un experto de la sinfonía!</p>
                             <hr>
-                            <div class="container">
+                            <div class="container w-100 text-center">
                                 <a href="https://www.youtube.com/watch?v=54nV3O3XvcU" class="btn btn-danger">Acceder</a>
                             </div>
                         </div>
                     </div>
-                    <div class="card p-2 border border-5">
+                    <div class="card p-2 border border-5 m-2">
                         <img src="./Recursos/Imagenes/mozart_carrusel.jpg" class="card-img-top"
                             alt="Imagen del profesor Mozart">
                         <div class="card-body">
                             <h5 class="card-title">Mozart</h5>
-                            <p class="card-text">¿Te gustaría adentrarte al mundo clásico y aprender todo sobre
+                            <p class="card-text text-shadow-none">¿Te gustaría adentrarte al mundo clásico y aprender todo sobre
                                 Orquestas desde cero? En este curso aprenderás a identificar y explotar de manera
                                 práctica sinfonías, sonatas... de la misma forma que haría un profesional del campo.</p>
                             <hr>
-                            <div class="container">
+                            <div class="container w-100 text-center">
                                 <a href="https://www.youtube.com/watch?v=rrk-zuuc77U" class="btn btn-danger">Acceder</a>
                             </div>
                         </div>
                     </div>
-                    <div class="card p-2 border border-5">
+                    <div class="card p-2 border border-5 m-2">
                         <img src="./Recursos/Imagenes/wagner_carrusel.jpg" class="card-img-top"
                             alt="Imagen del profesor Richard Wagner">
                         <div class="card-body">
                             <h5 class="card-title">Richard Wagner</h5>
-                            <p class="card-text">¿No sabes tocar el piano? Mejor, porque
+                            <p class="card-text text-shadow-none">¿No sabes tocar el piano? Mejor, porque
                                 en este curso vamos a empezar
                                 desde
                                 cero. Un curso pensado para todas las personas de todas las edades, independientemente
                                 de su nivel.
                             </p>
                             <hr>
-                            <div class="container">
+                            <div class="container w-100 text-center">
                                 <a href="https://www.youtube.com/watch?v=GGU1P6lBW6Q" class="btn btn-danger">Acceder</a>
                             </div>
                         </div>
@@ -191,17 +191,17 @@
             </div>
         </div>
         <!--Precios-->
-        <div class="contents d-block mt-5">
+        <div class="contents d-block mt-5 m-0-auto">
             <div class="container-fluid">
                 <header class="mb-5">
                     <h2 class="text-center text-uppercase text-secondary" id="precio">Precios</h2>
                 </header>
-                <div class="card-group">
-                    <div class="card p-2 border border-5">
+                <div class="card-group bg-secondary">
+                    <div class="card p-2 border border-5 m-2">
                         <div class="card-header">
                             <h5 class="my-0 font-weight-normal text-center">Principiante</h5>
                         </div>
-                        <div class="card-body">
+                        <div class="card-body ">
                             <h1 class="card-title pricing-card-title text-center">20€<small
                                     class="text-muted">/mes</small></h1>
                             <ul class="list-unstyled mt-3 mb-4 letraPrecio">
@@ -214,7 +214,7 @@
                                 data-bs-target="#exampleModal">
                                 Comprar
                             </button>
-                            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                            <div class="modal fade w-100" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
                                 aria-hidden="true">
                                 <div class="modal-dialog">
                                     <div class="modal-content p-3">
@@ -273,7 +273,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card p-2 border border-5">
+                    <div class="card p-2 border border-5 m-2">
                         <div class="card-header">
                             <h5 class="my-0 font-weight-normal text-center">Pro</h5>
                         </div>
@@ -304,7 +304,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card p-2 border border-5">
+                    <div class="card p-2 border border-5 m-2">
                         <div class="card-header">
                             <h5 class="my-0 font-weight-normal text-center">Master</h5>
                         </div>
